NetBSD Problem Report #45577

From taca@back-street.net  Sun Nov  6 11:29:15 2011
Return-Path: <taca@back-street.net>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id A024663B974
	for <gnats-bugs@gnats.NetBSD.org>; Sun,  6 Nov 2011 11:29:15 +0000 (UTC)
Message-Id: <20111106112748.A59A0B2B2@edge.back-street.net>
Date: Sun,  6 Nov 2011 20:27:48 +0900 (JST)
From: taca@back-street.net
Reply-To: taca@back-street.net
To: gnats-bugs@gnats.NetBSD.org
Subject: system unstable: pid 0 is killed: exceeded RLIMIT_CPU
X-Send-Pr-Version: 3.95

>Number:         45577
>Category:       kern
>Synopsis:       system unstable: pid 0 is killed: exceeded RLIMIT_CPU
>Confidential:   no
>Severity:       critical
>Priority:       high
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sun Nov 06 11:30:00 +0000 2011
>Closed-Date:    Sun Nov 06 14:16:28 +0000 2011
>Last-Modified:  Sun Nov 06 14:16:28 +0000 2011
>Originator:     Takahiro Kambe
>Release:        NetBSD 5.99.56
>Organization:
Takahiro Kambe
>Environment:


System: NetBSD edge.back-street.net 5.99.56 NetBSD 5.99.56 (VMWARE-F3) #109: Sun Nov 6 18:35:36 JST 2011 taca@edge.back-street.net:/data/amd64/obj/sys/arch/amd64/compile/VMWARE-F3 amd64
Architecture: x86_64
Machine: amd64
>Description:
	Latest kernel is unstable with these messages:

pid 0 is killed: exceeded RLIMIT_CPU
pid 1021 is killed: exceeded RLIMIT_CPU
...

>How-To-Repeat:
	Use kernel 6th Nov. 2011
>Fix:
	It seems that there are comparing 64bit time_t with long.

Index: sys/kern/kern_synch.c
===================================================================
RCS file: /cvsroot/src/sys/kern/kern_synch.c,v
retrieving revision 1.295
diff -u -u -r1.295 kern_synch.c
--- sys/kern/kern_synch.c	5 Oct 2011 20:37:40 -0000	1.295
+++ sys/kern/kern_synch.c	6 Nov 2011 11:21:02 -0000
@@ -1198,7 +1198,7 @@
 	PROCLIST_FOREACH(p, &allproc) {
 		struct lwp *l;
 		struct rlimit *rlim;
-		long runtm;
+		time_t runtm;
 		int sig;

 		/* Increment sleep time (if sleeping), ignore overflow. */

>Release-Note:

>Audit-Trail:
From: "David A. Holland" <dholland@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/45577 CVS commit: src/sys/kern
Date: Sun, 6 Nov 2011 14:11:00 +0000

 Module Name:	src
 Committed By:	dholland
 Date:		Sun Nov  6 14:11:00 UTC 2011

 Modified Files:
 	src/sys/kern: kern_synch.c

 Log Message:
 time_t isn't necessarily "long". PR 45577 from taca@


 To generate a diff of this commit:
 cvs rdiff -u -r1.295 -r1.296 src/sys/kern/kern_synch.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Sun, 06 Nov 2011 14:16:28 +0000
State-Changed-Why:
fixed, thanks


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.