time_t isn't necessarily "long". PR 45577 from taca@